--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hooks-practice",
-  "homepage": "https://julie-j-code.github.io/hooks-practice/",
+  "homepage": "https://julie-j-code.github.io/revisions-react-hooks",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
